# OS_Class_Solution

./: .gitignore  CMakeLists.txt  CMakePresets.json
Solution1/: CMakeLists.txt
Solution2/: CMakeLists.txt  main.cpp  readme.md
Solution3/: CMakeLists.txt  Solution.h  main.cpp  readme.md
Solution4/: CMakeLists.txt  main.cpp  readme.md
Solution_Pipe/: CMakeLists.txt  Child.cpp  Pipe.cpp  readme.md
Solution_Socket/: CMakeLists.txt  Client.cpp  Server.cpp  readme.md
